<resources>
    <string name="app_name">WERO</string>

    <string name="my_diary">나의 이야기</string>
    <string name="postbox">우편함</string>
    <string name="every_wero">모두의 위로</string>
    <color name="mainColor">#efefef</color>

    <string name="show_list">리스트로 보기</string>
    <string name="null_list">새로운 일기를 작성해 주세요!</string>
    <string name="null_date">날짜를 선택해 주세요!</string>

    <string name="write_diary">일기 쓰기</string>
    <string name="edit_diary">일기를 입력해 주세요!</string>
    <string name="save">저장하기</string>
    <string name="want_send">편지 보낼래요!</string>

    <string name="null_name">null</string>
    <string name="post_of">님의 편지</string>
    <string name="null_content">내용 없음 / 편지 내용 불러오기 실패</string>

    <string name="edit_reply">답장을 입력해 주세요!</string>
    <string name="send">답장하기</string>

    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="register">계정 만들기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="login">로그인</string>

    <string name="reply">답장</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="share">공유</string>
    <string name="report">신고</string>

    <string name="settings">설정</string>
    <string name="profile_setting">프로필 세팅</string>
    <string name="nickname">닉네임</string>
    <string name="notification_setting">알림 설정</string>
    <string name="app_push">앱 푸시 알림</string>
    <string name="background_setting">배경 설정</string>
    <string name="app_info">WERO 정보</string>
    <string name="app_version">WERO 버전</string>
    <string name="version">v1.0</string>
    <string name="logout">로그아웃</string>
    <string name="edit_nickname">닉네임 수정</string>

    <string name="reply_list">답장이 왔어요!</string>

    <string name="kakao_app_key">ade08056f1c3a9fd0f215520fd377866</string>
</resources>