<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/mainColor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/edit_nickname"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/subColor"/>
    <EditText
        android:id="@+id/edit_nickname"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:background="@color/white"
        android:fontFamily="@font/ridibatang"
        android:textAlignment="center"
        android:textSize="12sp"
        android:hint="@string/nickname"/>
    <Button
        android:id="@+id/btn_edit"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:padding="0dp"
        android:textSize="13sp"
        android:text="@string/edit"/>

</LinearLayout>