<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mainColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/txt_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_above="@+id/edit_email"
            android:layout_centerHorizontal="true"/>


        <EditText
            android:id="@+id/edit_email"
            android:layout_width="280dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_above="@+id/edit_password"
            android:layout_centerHorizontal="true"
            android:paddingLeft="10dp"
            android:background="@color/white"
            android:hint="@string/email"
            android:fontFamily="@font/ridibatang"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="280dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:layout_above="@id/btn_login"
            android:layout_centerHorizontal="true"
            android:paddingLeft="10dp"
            android:background="@color/white"
            android:hint="@string/password"
            android:fontFamily="@font/ridibatang"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:background="@color/subColor"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@+id/btn_login"
            android:layout_toStartOf="@+id/btn_find_password"
            android:text="@string/register"
            android:textColor="@color/subColor"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_find_password"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@+id/btn_login"
            android:layout_alignRight="@+id/btn_login"
            android:text="@string/find_password"
            android:textColor="@color/subColor"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#1A707070"
            android:layout_below="@id/btn_register"
            android:layout_marginTop="55dp"/>

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="간편로그인"
            android:textSize="12sp"
            android:textColor="@color/subColor"
            android:background="@color/mainColor"
            android:layout_below="@id/btn_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <com.kakao.usermgmt.LoginButton
            android:id="@+id/btn_kakao_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_text"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="카카오 로그인"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>