<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:background="@color/mainColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/img_post"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:src="@drawable/email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:text="@string/null_name"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/img_post"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_post_of"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="2dp"
        android:text="@string/post_of"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/txt_name"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txt_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/null_content"
        android:textSize="12sp"
        android:padding="15dp"
        android:layout_marginTop="5dp"
        android:lineSpacingExtra="5dp"
        android:maxLines="3"
        android:textColor="@color/subColor"
        android:background="@drawable/postbox_textview_edge"
        app:layout_constraintTop_toBottomOf="@id/img_post"/>

</androidx.constraintlayout.widget.ConstraintLayout>