<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ridibatang"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/mainColor"
        android:padding="25dp"
        tools:context=".Setting">

        <TextView
            android:id="@+id/txt_profile_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_setting"
            android:textSize="12sp"
            android:textColor="#9A9A9A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txt_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/txt_profile_setting"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/font"
            android:text="@string/edit"
            android:textColor="#03A9F4"
            android:textSize="15sp"
            android:background="#00ff0000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="@id/txt_nickname"
            app:layout_constraintTop_toBottomOf="@id/txt_profile_setting" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/null_name"
            android:textSize="15sp"
            android:textColor="#5C5C5C"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/txt_nickname"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/firstLine"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#9A9A9A"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/txt_name"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/txt_alarm_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_setting"
            android:textSize="12sp"
            android:textColor="#9A9A9A"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/firstLine"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/alarmSettingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_alarm_setting"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:text="@string/app_push"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/switch_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"/>

        </LinearLayout>

<!--        <View-->
<!--            android:id="@+id/secondLine"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="1dp"-->
<!--            android:background="#9A9A9A"-->
<!--            android:layout_marginTop="15dp"-->
<!--            app:layout_constraintTop_toBottomOf="@id/alarmSettingLayout"-->
<!--            app:layout_constraintStart_toStartOf="parent"/>-->

<!--        <TextView-->
<!--            android:id="@+id/backgroundColorTxt"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/background_setting"-->
<!--            android:textSize="12sp"-->
<!--            android:textColor="#9A9A9A"-->
<!--            android:layout_marginTop="25dp"-->
<!--            app:layout_constraintTop_toBottomOf="@id/secondLine"-->
<!--            app:layout_constraintStart_toStartOf="parent"/>-->

<!--        <LinearLayout-->
<!--            android:id="@+id/backgroundSettingLayout"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintTop_toBottomOf="@id/backgroundColorTxt"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="배경 색상"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="18sp"/>-->

<!--        </LinearLayout>-->

        <View
            android:id="@+id/thirdLine"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#9A9A9A"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/alarmSettingLayout"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txt_wero_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_info"
            android:textSize="12sp"
            android:textColor="#9A9A9A"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/thirdLine"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/WEROInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_wero_info"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_version"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textColor="#9A9A9A"
                    android:textSize="18sp"
                    android:layout_marginEnd="5dp"/>

            </LinearLayout>

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal"-->
<!--                android:layout_marginTop="20dp">-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="개인정보 처리방침"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="15sp"/>-->

<!--                <View-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="0dp"-->
<!--                    android:layout_weight="1" />-->

<!--                <ImageView-->
<!--                    android:layout_width="30dp"-->
<!--                    android:layout_height="30dp"-->
<!--                    android:layout_marginEnd="5dp"-->
<!--                    android:src="@drawable/information"/>-->

<!--            </LinearLayout>-->

        </LinearLayout>

        <View
            android:id="@+id/fourthLine"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#9A9A9A"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/WEROInfoLayout"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/logoutLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/fourthLine"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/img_logout"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/door"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>