<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainColor">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:fontFamily="@font/ridibatang"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"/>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/txt_content"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@+id/toolbar"
            android:lineSpacingExtra="5dp"
            android:padding="15dp"
            android:textSize="12sp"
            android:text="text_test_content"/>
        <EditText
            android:id="@+id/edit_reply"
            android:background="@drawable/edit_border"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:gravity="top"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:padding="15dp"
            android:layout_below="@+id/txt_content"
            android:lineSpacingExtra="5dp"
            android:fontFamily="@font/ridibatang"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:hint="@string/edit_reply"/>
        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_reply"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:text="@string/send" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>